Java/1st/bai01_22001549.txt
1. Bỏ Qua Main:
	Biên dịch lỗi: 
	Hello_World.java:2: error: <identifier> expected
        public static void (String[] args){
						   ^

2. Bỏ qua String: Biên dịch lỗi:
	Hello_World.java:2: error: illegal start of type
        public static void main([] args){
                                ^
	Hello_World.java:2: error: ',', ')', or '[' expected
        public static void main([] args){
                                  ^
3. Bỏ qua Hello_World: Biên dịch lỗi:
	Hello_World.java:1: error: <identifier> expected
	public class  {
				^

4. Bỏ qua System.out: biên dịch lỗi:

	Hello_World.java:3: error: cannot find symbol
                println("Hello, world!");
                ^
	symbol:   method println(String)
	location: class Hello_World

5. Bỏ qua println: Biên dịch lỗi: 
	Hello_World.java:3: error: cannot find symbol
                System.out("Hello, world!");
                      ^
	symbol:   method out(String)
	location: class System